<resources>
    <string name="app_name">Football Info</string>
    <string name="players">Players</string>
    <string name="epl_club">EPL_Club</string>
    <string name="search">Search</string>
    <string name="liverpool_fc">Liverpool FC</string>
    <string name="age">Age:</string>
    <string name="sdate">SDate:</string>
    <string name="apperance">Apperance:</string>
    <string name="goals">Goals:</string>
    <string name="player">Player:</string>

    <string name="english_premier_league">English Premier League</string>

</resources>
