<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playerInfoActivity">

    <TextView
        android:id="@+id/tvGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApps" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayer" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvAge"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartDays" />

    <TextView
        android:id="@+id/tvStartDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAge" />

    <TextView
        android:id="@+id/tvLivplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liverpool_fc"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:text="@string/player"
        app:layout_constraintEnd_toStartOf="@+id/tvPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@+id/tvP"
        app:layout_constraintTop_toBottomOf="@+id/tvP" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sdate"
        app:layout_constraintStart_toStartOf="@+id/tvAg"
        app:layout_constraintTop_toBottomOf="@+id/tvAg" />

    <TextView
        android:id="@+id/tvA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apperance"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvApps"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/goals"
        app:layout_constraintStart_toStartOf="@+id/tvA"
        app:layout_constraintTop_toBottomOf="@+id/tvA" />

</android.support.constraint.ConstraintLayout>
